# dateparser

./: .bandit.yml  .bumpversion.cfg  .coveragerc  .editorconfig  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  NumberParser.py  README.md  README.rst  SECURITY.md  conftest.py  main_test.py  pyproject.toml  pytest.ini  requirements-build.txt  requirements.txt  setup.cfg  setup.py  test.py  test_whitespace.py  tests.py  tox.ini
artwork/: dateparser.xcf
data/: __init__.py  languages.yaml  settings.yaml
dataparser_changes/: pyvenv.cfg
date/: pyvenv.cfg
dateparser/: __init__.py  conf.py  data_loader.py  date.py  date_parser.py  find_date.py  freshness_date_parser.py  language.py  languages.yaml  parser.py  timezone_parser.py  timezones.py  utils.py  validator.py
dateparser_cli/: cli.py  exceptions.py  fasttext_manager.py  utils.py
dateparser_data/: settings.py
dateparser_download/: cli.py
dateparser_scripts/: get_cldr_data.py  get_cldr_numeral_data.py  order_languages.py  requirements.txt  update_supported_languages_and_locales.py  utils.py  write_complete_data.py
docs/: Makefile  conf.py  conf.rst  contributing.rst  custom_detect_languages_func.rst  custom_language_detection.rst  dateparser.calendars.rst  dateparser.languages.rst  dateparser.rst  index.rst  installation.rst  introduction.rst  make.bat  modules.rst  settings.rst  supported_locales.rst  template.rst  usage.rst
fuzzing/: build.sh  dateparser_fuzzer.py  fuzz_helpers.py  requirements.txt
language/: __init__.py  main.py  requirements.txt
scripts/: get_cldr_data.py  get_cldr_numeral_data.py  order_languages.py  requirements.txt  update_supported_languages_and_locales.py  utils.py  write_complete_data.py
tests/: __init__.py  requirements.txt  test_cache_size_limit.py  test_clean_api.py  test_concurrency.py  test_data.py  test_date.py  test_date_data.py  test_date_parser.py  test_date_range.py  test_dateparser_data_integrity.py  test_find_date.py  test_freshness_date_parser.py  test_hijri.py  (+19 more)
(+1778 files in other folders)
